[package]
name = "conversion_tools_api"
version = "0.1.2"
edition = "2021"
author = "WinsomeQuill"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }
serde_json = "1.0"